--- a/.github/ISSUE_TEMPLATE/new_task.yml
+++ b/.github/ISSUE_TEMPLATE/new_task.yml
@@ -17,7 +17,7 @@ body:
   - type: input
     id: when
     attributes:
-      label: What is the requested deadline for the completion of this task?
+      label: What is the requested deadline and why?
   - type: textarea
     id: statusquo
     attributes:
