--- a/.github/ISSUE_TEMPLATE/user_request.yml
+++ b/.github/ISSUE_TEMPLATE/user_request.yml
@@ -13,7 +13,7 @@ body:
     id: what
     attributes:
       label: What is being requested?
-  - type: input
+  - type: textarea
     id: why
     attributes:
       label: How would this request improve your current workflow?
