--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "documentation-theme-jekyll"]
 	path = theme
-	url = https://github.com/ioos/documentation-theme-jekyll
+	url = https://github.com/ioos/documentation-theme-jekyll.git
 [submodule "_data/navbars_theme"]
 	path = _data/navbars
-	url = https://github.com/ioos/documentation-theme-jekyll
+	url = https://github.com/ioos/documentation-theme-jekyll.git
 	branch = navbars
